@@ -256,3 +256,5 @@ https://www.mdnkids.com/news/?Serial_NO=117273
 https://www.mdnkids.com/news/?Serial_NO=117266
 https://news.ebc.net.tw/news/living/220265
 https://www.mdnkids.com/news/?Serial_NO=117373
+http://m.news.cctv.com/2020/08/03/ARTIF6MCdGHVjzLTTAVM3lEO200803.shtml
+http://m.news.cctv.com/2020/08/05/ARTInbk85I3vDnWHYgPfvcJd200805.shtml
